<resources>
    <string name="app_name">recipe_app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="search_results">Search Results</string>
    <string-array name="cuisine_types">
        <item>All</item>
        <item>Italian</item>
        <item>Indian</item>
        <item>Chinese</item>
        <item>Mexican</item>
    </string-array>
    <string-array name="meal_types">
        <item>All</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="view_nutritional_info">View Nutritional Info</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="total_time">Total Time:</string>
    <string name="this_is_a_short_summary_of_the_recipe">This is a short summary of the recipe.</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="instruction">Instruction</string>
    <string name="nutrient">Nutrient</string>
    <string name="unit">Unit</string>
    <string name="time">time</string>
    <string name="view_toggle_icon_desc">View Info</string>
    <string name="cuisine">Cuisine</string>
    <string name="meal_type">Meal Type</string>
    <string name="nutritional_info">Nutritional Info</string>
    <string name="num">Num</string>
    <string name="generate_shopping_list">generate shopping list</string>
    <string name="generated_shopping_list">Generated Shopping List</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_email_here">Your email here</string>
    <string name="recipe_app" />
    <string name="yourname_example_com">yourname@example.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dashboardfragment">DashboardFragment</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_your_email_address_to_receive_a_password_reset_link">Enter your email address to receive a password reset link.</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="update">Update</string>
    <string name="your_feedback_helps_us_make_this_app_better">Your feedback helps us make this app better.</string>
    <string name="tell_us_anything">Tell us anything</string>
    <string name="submit">Submit</string>
    <string name="wanna_hear_a_joke">Wanna hear a joke?</string>
    <string name="joke_of_the_day">joke of the day</string>
    <string name="joke">joke</string>
    <string name="got_it">Got it!</string>
    <string name="here_s_a_joke">Here\'s a Joke!</string>
    <string name="here_s_one">Here\'s one!</string>
    <string name="jktr">joke or trivia</string>
    <string name="title_shoppinglist">Shopping List</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- Meals per Day Options -->
    <string-array name="meals_per_day_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Allergies Options -->
    <string-array name="allergies_options">
        <item>Gluten</item>
        <item>Dairy</item>
        <item>Peanut</item>
        <item>Seafood</item>
        <item>Sesame</item>
        <item>Egg</item>
        <item>Soy</item>
        <item>Sulfite</item>
        <item>Tree Nut</item>
        <item>Wheat</item>
    </string-array>

    <!-- Diets Options -->
    <string-array name="diets_options">
        <item>Balanced</item>
        <item>High-Protein</item>
        <item>Low-Fat</item>
        <item>Low-Carb</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Paleo</item>
        <item>Keto</item>
    </string-array>

    <!-- Calorie Min Options -->
    <string-array name="calorie_min_options">
        <item>1000</item>
        <item>1200</item>
        <item>1400</item>
        <item>1600</item>
        <item>1800</item>
    </string-array>

    <!-- Calorie Max Options -->
    <string-array name="calorie_max_options">
        <item>2000</item>
        <item>2200</item>
        <item>2400</item>
        <item>2600</item>
        <item>2800</item>
    </string-array>

    <!-- Prompts for Spinners -->
    <string name="allergies_prompt">Select an allergy</string>
    <string name="diets_prompt">Select a diet</string>
    <string name="calorie_min_prompt">Select minimum calories</string>
    <string name="calorie_max_prompt">Select maximum calories</string>

</resources>
