<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.RecipeDetailsFragment"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Recipe Image -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sample_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Recipe Name -->
            <TextView
                android:id="@+id/recipeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/recipe_name"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Recipe Summary -->
            <TextView
                android:id="@+id/recipeSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/this_is_a_short_summary_of_the_recipe"
                android:textSize="16sp"
                android:textColor="#666"
                app:layout_constraintTop_toBottomOf="@id/recipeName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Cuisine Tag -->
            <TextView
                android:id="@+id/cuisine_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/cuisine"
                android:textColor="@android:color/white"
                android:background="@drawable/cuisine_tag_bg"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/recipeSummary"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Meal Type Tag -->
            <TextView
                android:id="@+id/meal_type_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/meal_type"
                android:textColor="@android:color/white"
                android:background="@drawable/mealtype_tag_bg"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/recipeSummary"
                app:layout_constraintStart_toEndOf="@id/cuisine_tag" />

            <!-- Shopping Basket Icon -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shoppingBasketFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/generate_shopping_list"
                app:layout_constraintTop_toBottomOf="@id/meal_type_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/totalTime"
                app:layout_constraintVertical_bias="0.562"
                android:src="@drawable/ic_shopping_basket"
                app:backgroundTint="#CC8776"
                android:tint="@color/white" />

            <!-- Total Time -->
            <TextView
                android:id="@+id/totalTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/total_time"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/cuisine_tag"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/totalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/time"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.009"
                app:layout_constraintStart_toEndOf="@id/totalTimeText"
                app:layout_constraintTop_toBottomOf="@id/cuisine_tag" />

            <!-- Ingredients Section -->
            <TextView
                android:id="@+id/ingredientsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/ingredients"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/totalTime"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/ingredientsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Nutritional Info Section -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nutrition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/ingredientsList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Nutritional Info Header -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nutritionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <!-- Nutritional Info Label -->
                    <TextView
                        android:id="@+id/nutritionLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nutritional_info"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <!-- Toggle View Info -->
                    <ImageView
                        android:id="@+id/viewToggleIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                        android:contentDescription="@string/view_toggle_icon_desc"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Nutritional Info List -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nutritionList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/nutritionHeader"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Instructions Section -->
            <TextView
                android:id="@+id/instructionsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/instructions"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/nutrition"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instructionsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/instructionsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

<!--            <ImageButton-->
<!--                android:id="@+id/savebtn"-->
<!--                android:layout_width="64dp"-->
<!--                android:layout_height="63dp"-->
<!--                android:src="@drawable/heart_selector"-->
<!--                app:layout_constraintEnd_toEndOf="@+id/recipeName"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/imageView" />-->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="256dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/heart_selector"
                android:backgroundTint="#7DCE82"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:tint="@android:color/black"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@+id/recipeName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recipeName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
